--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -34,26 +34,20 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main-background" translatesAutoresizingMaskIntoConstraints="NO" id="fA6-nB-KSM">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Register code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TxA-ii-1iN">
-                                <rect key="frame" x="70" y="269" width="180" height="30"/>
-                                <color key="tintColor" red="0.17254901959999999" green="0.77647058820000003" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="180" id="7Ey-Zo-fSV"/>
-                                    <constraint firstAttribute="height" constant="30" id="pcf-rj-dHW"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CI3-Hb-fkl" customClass="GZEDoubleCtrlView" customModule="Gooze" customModuleProvider="target">
+                                <rect key="frame" x="16" y="284" width="288" height="284"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.21568627450980393" green="0.2196078431372549" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="fA6-nB-KSM" secondAttribute="trailing" id="1hi-ga-e03"/>
+                            <constraint firstItem="CI3-Hb-fkl" firstAttribute="leading" secondItem="889-jd-Zop" secondAttribute="leadingMargin" id="EHd-Hm-qEB"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CI3-Hb-fkl" secondAttribute="trailing" id="Jr9-Bc-gvO"/>
                             <constraint firstItem="fA6-nB-KSM" firstAttribute="top" secondItem="889-jd-Zop" secondAttribute="top" id="Tup-MB-1Dm"/>
                             <constraint firstAttribute="bottom" secondItem="fA6-nB-KSM" secondAttribute="bottom" id="Vsx-zw-gNO"/>
-                            <constraint firstItem="TxA-ii-1iN" firstAttribute="centerY" secondItem="889-jd-Zop" secondAttribute="centerY" id="Ybv-eT-mZR"/>
+                            <constraint firstItem="MHZ-m2-D39" firstAttribute="top" secondItem="CI3-Hb-fkl" secondAttribute="bottom" id="aGf-4J-nxK"/>
                             <constraint firstItem="fA6-nB-KSM" firstAttribute="leading" secondItem="889-jd-Zop" secondAttribute="leading" id="vst-m1-qSp"/>
-                            <constraint firstItem="TxA-ii-1iN" firstAttribute="centerX" secondItem="889-jd-Zop" secondAttribute="centerX" id="wAP-wv-4K3"/>
+                            <constraint firstItem="CI3-Hb-fkl" firstAttribute="height" secondItem="889-jd-Zop" secondAttribute="height" multiplier="0.5" id="ymV-n0-lGD"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Jwv-pn-kdh">
@@ -64,6 +58,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="dblCtrlView" destination="CI3-Hb-fkl" id="hEG-Wb-mr6"/>
                         <segue destination="S19-gD-Gha" kind="show" identifier="signUpSegue" id="Lsk-jR-YPn"/>
                     </connections>
                 </viewController>
@@ -817,7 +812,7 @@
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pin-w-shadow" translatesAutoresizingMaskIntoConstraints="NO" id="vL6-Ko-X92">
-                                <rect key="frame" x="148.5" y="268" width="55" height="52"/>
+                                <rect key="frame" x="149" y="268" width="55" height="52"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="55" id="FeD-Km-c1B"/>
                                     <constraint firstAttribute="height" constant="52" id="fyN-rz-Tnu"/>
@@ -1047,7 +1042,7 @@
         <image name="searching-radius-small" width="210" height="210"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="akO-BX-PMh"/>
+        <segue reference="Lsk-jR-YPn"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
