--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -719,46 +719,6 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="1Uq-Kh-1Uj">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PH3-zt-MvS">
-                                <rect key="frame" x="70" y="478" width="180" height="35"/>
-                                <color key="backgroundColor" red="0.30196078431372547" green="0.30196078431372547" blue="0.30196078431372547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="feV-ia-4ZV"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="hFh-dm-V0i"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
-                                <state key="normal" title="ACTIVAR GOOZE"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="5"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                        <integer key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
-                                        <color key="value" red="0.1803921568627451" green="0.80784313725490198" blue="0.68627450980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </button>
-                            <view alpha="0.58999999999999997" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uEP-GW-QrN">
-                                <rect key="frame" x="0.0" y="523" width="320" height="45"/>
-                                <color key="backgroundColor" red="0.21568627450980393" green="0.2196078431372549" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="Q4T-av-28m"/>
-                                </constraints>
-                            </view>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="5" translatesAutoresizingMaskIntoConstraints="NO" id="80a-Wx-iQm">
-                                <rect key="frame" x="54" y="523" width="198" height="46"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="aZv-ZE-MC2"/>
-                                </constraints>
-                                <color key="minimumTrackTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <color key="maximumTrackTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <connections>
-                                    <action selector="timeSliderChanged:" destination="zf8-kb-SHu" eventType="valueChanged" id="DuW-fV-Opa"/>
-                                </connections>
-                            </slider>
                             <view alpha="0.51000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OYR-Ad-JXG">
                                 <rect key="frame" x="0.0" y="64" width="320" height="45"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -776,7 +736,7 @@
                                 <color key="maximumTrackTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="thumbTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <action selector="distanceSliderChanged:" destination="zf8-kb-SHu" eventType="valueChanged" id="vhw-ZB-uoK"/>
+                                    <action selector="topSliderChanged:" destination="zf8-kb-SHu" eventType="valueChanged" id="cLz-Dc-UaX"/>
                                 </connections>
                             </slider>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="navigation-icon" translatesAutoresizingMaskIntoConstraints="NO" id="6SB-GO-3Wb">
@@ -793,16 +753,6 @@
                                     <constraint firstAttribute="width" constant="60" id="fgR-xC-QEW"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 hrs" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5rg-Hu-enC">
-                                <rect key="frame" x="255" y="523" width="60" height="45"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="Px7-za-JkB"/>
-                                    <constraint firstAttribute="height" constant="45" id="qlK-Ma-fDq"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="searching-radius-small" translatesAutoresizingMaskIntoConstraints="NO" id="V8w-vK-5vr">
@@ -849,6 +799,28 @@
                                     <constraint firstAttribute="width" secondItem="US3-n8-PGT" secondAttribute="height" multiplier="1:1" id="qaP-Tv-9Zl"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PH3-zt-MvS">
+                                <rect key="frame" x="70" y="513" width="180" height="35"/>
+                                <color key="backgroundColor" red="0.30196078431372547" green="0.30196078431372547" blue="0.30196078431372547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="feV-ia-4ZV"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="hFh-dm-V0i"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
+                                <state key="normal" title="ACTIVAR GOOZE"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                        <integer key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
+                                        <color key="value" red="0.1803921568627451" green="0.80784313725490198" blue="0.68627450980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.21568627450980393" green="0.2196078431372549" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -858,10 +830,7 @@
                             <constraint firstAttribute="trailing" secondItem="NeT-Hf-MSf" secondAttribute="trailing" constant="5" id="5WK-D3-61F"/>
                             <constraint firstItem="US3-n8-PGT" firstAttribute="centerY" secondItem="LPF-YG-LAa" secondAttribute="centerY" multiplier="1.5" id="8u3-4z-tp5"/>
                             <constraint firstItem="77d-Ws-eC5" firstAttribute="centerY" secondItem="LPF-YG-LAa" secondAttribute="centerY" multiplier="0.5" id="9VU-Kn-6oV"/>
-                            <constraint firstItem="80a-Wx-iQm" firstAttribute="leading" secondItem="LPF-YG-LAa" secondAttribute="leadingMargin" constant="40" id="GGg-ld-rGW"/>
-                            <constraint firstItem="5rg-Hu-enC" firstAttribute="leading" secondItem="80a-Wx-iQm" secondAttribute="trailing" constant="5" id="GmV-Kg-diZ"/>
                             <constraint firstItem="PwI-nA-N7q" firstAttribute="centerY" secondItem="LPF-YG-LAa" secondAttribute="centerY" multiplier="0.92" id="HHz-MF-8ux"/>
-                            <constraint firstItem="cAx-OH-86K" firstAttribute="top" secondItem="80a-Wx-iQm" secondAttribute="bottom" id="Laz-rC-Wzg"/>
                             <constraint firstItem="NeT-Hf-MSf" firstAttribute="top" secondItem="0E6-b3-6z2" secondAttribute="bottom" id="Lff-Zp-Pbj"/>
                             <constraint firstItem="77d-Ws-eC5" firstAttribute="centerX" secondItem="LPF-YG-LAa" secondAttribute="centerX" id="Ll9-00-EZA"/>
                             <constraint firstItem="AmF-ix-bj1" firstAttribute="centerY" secondItem="LPF-YG-LAa" secondAttribute="centerY" multiplier="0.92" id="PG2-I1-PAP"/>
@@ -873,38 +842,30 @@
                             <constraint firstItem="NeT-Hf-MSf" firstAttribute="leading" secondItem="QGV-rv-vPK" secondAttribute="trailing" constant="5" id="VBU-vO-b92"/>
                             <constraint firstItem="1Uq-Kh-1Uj" firstAttribute="top" secondItem="0E6-b3-6z2" secondAttribute="bottom" id="bSI-e8-Lry"/>
                             <constraint firstItem="QGV-rv-vPK" firstAttribute="top" secondItem="0E6-b3-6z2" secondAttribute="bottom" id="ePM-y7-FZn"/>
-                            <constraint firstItem="uEP-GW-QrN" firstAttribute="top" secondItem="PH3-zt-MvS" secondAttribute="bottom" constant="10" id="frd-kH-Hp1"/>
                             <constraint firstItem="gRo-ng-x7o" firstAttribute="centerY" secondItem="LPF-YG-LAa" secondAttribute="centerY" multiplier="1.5" id="glW-SA-uK8"/>
                             <constraint firstItem="V8w-vK-5vr" firstAttribute="centerY" secondItem="LPF-YG-LAa" secondAttribute="centerY" constant="30" id="gqj-qc-D6h"/>
                             <constraint firstItem="vL6-Ko-X92" firstAttribute="centerY" secondItem="LPF-YG-LAa" secondAttribute="centerY" constant="10" id="hkh-I3-ijy"/>
                             <constraint firstItem="QGV-rv-vPK" firstAttribute="leading" secondItem="6SB-GO-3Wb" secondAttribute="trailing" constant="20" id="jSf-Kn-pvU"/>
-                            <constraint firstItem="uEP-GW-QrN" firstAttribute="leading" secondItem="LPF-YG-LAa" secondAttribute="leading" id="jbp-aN-NNk"/>
                             <constraint firstItem="PH3-zt-MvS" firstAttribute="centerX" secondItem="LPF-YG-LAa" secondAttribute="centerX" id="nhI-gr-6Yl"/>
+                            <constraint firstItem="cAx-OH-86K" firstAttribute="top" secondItem="PH3-zt-MvS" secondAttribute="bottom" constant="20" id="qKp-vb-qZL"/>
                             <constraint firstItem="OYR-Ad-JXG" firstAttribute="leading" secondItem="LPF-YG-LAa" secondAttribute="leading" id="r0m-RB-eSY"/>
                             <constraint firstItem="V8w-vK-5vr" firstAttribute="centerX" secondItem="LPF-YG-LAa" secondAttribute="centerX" id="r8u-uq-yBO"/>
-                            <constraint firstItem="cAx-OH-86K" firstAttribute="top" secondItem="uEP-GW-QrN" secondAttribute="bottom" id="rer-x8-eaS"/>
                             <constraint firstItem="gRo-ng-x7o" firstAttribute="centerX" secondItem="LPF-YG-LAa" secondAttribute="centerX" multiplier="1.4" id="s6p-L6-8In"/>
                             <constraint firstAttribute="trailing" secondItem="1Uq-Kh-1Uj" secondAttribute="trailing" id="uF9-CI-3DE"/>
                             <constraint firstItem="US3-n8-PGT" firstAttribute="centerX" secondItem="LPF-YG-LAa" secondAttribute="centerX" multiplier="0.6" id="uJ7-Xi-C8i"/>
                             <constraint firstItem="AmF-ix-bj1" firstAttribute="centerX" secondItem="LPF-YG-LAa" secondAttribute="centerX" multiplier="0.4" id="vUC-nB-fNR"/>
-                            <constraint firstItem="5rg-Hu-enC" firstAttribute="trailing" secondItem="LPF-YG-LAa" secondAttribute="trailing" constant="-5" id="xce-uo-8Hn"/>
-                            <constraint firstAttribute="trailing" secondItem="uEP-GW-QrN" secondAttribute="trailing" id="yrE-yx-Unl"/>
                             <constraint firstItem="6SB-GO-3Wb" firstAttribute="leading" secondItem="LPF-YG-LAa" secondAttribute="leading" constant="20" id="zWc-ja-wYa"/>
-                            <constraint firstAttribute="bottom" secondItem="5rg-Hu-enC" secondAttribute="bottom" id="ztQ-Ox-kS6"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ySk-tW-HUT"/>
                     <connections>
                         <outlet property="activateGoozeButton" destination="PH3-zt-MvS" id="i2B-FP-lZ0"/>
-                        <outlet property="distanceLabel" destination="NeT-Hf-MSf" id="mEa-SV-AtE"/>
-                        <outlet property="distanceSlider" destination="QGV-rv-vPK" id="b23-cq-7GC"/>
                         <outlet property="distanceView" destination="OYR-Ad-JXG" id="WV7-2t-Z8n"/>
                         <outlet property="mapView" destination="1Uq-Kh-1Uj" id="9pU-wk-iT5"/>
                         <outlet property="navIcon" destination="6SB-GO-3Wb" id="Ts7-6Z-Bwx"/>
                         <outlet property="searchingRadiusView" destination="V8w-vK-5vr" id="N7s-Em-CBS"/>
-                        <outlet property="timeLabel" destination="5rg-Hu-enC" id="zJC-Ma-N8h"/>
-                        <outlet property="timeSlider" destination="80a-Wx-iQm" id="YBx-mt-0mG"/>
-                        <outlet property="timeView" destination="uEP-GW-QrN" id="kAZ-Dm-eKD"/>
+                        <outlet property="sliderLabel" destination="NeT-Hf-MSf" id="Qpy-WJ-2BM"/>
+                        <outlet property="topSlider" destination="QGV-rv-vPK" id="VPi-JZ-44g"/>
                         <outlet property="userBalloon1" destination="77d-Ws-eC5" id="9A0-1p-aGM"/>
                         <outlet property="userBalloon2" destination="AmF-ix-bj1" id="m8h-iP-4Mt"/>
                         <outlet property="userBalloon3" destination="PwI-nA-N7q" id="olB-px-6VB"/>
